update table column name; update employee controller

--- a/public/css/_navbar.scss
+++ b/public/css/_navbar.scss
@@ -64,9 +64,11 @@
             }
 
         }
+    }
+}
 
-
-
-
+.dropdown-menu[aria-labelledby="avatar-dropdown"] {
+    &.show {
+        position: absolute;
     }
 }
