--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -67,6 +67,7 @@ body {
 .dataTables_wrapper {
     overflow-x:auto;
 }
+
 table  {
     tr {
         td {
@@ -80,7 +81,7 @@ table  {
                 background:#5aa469;
             }
 
-            &:not(:first-child){
+            &:first-child{
                 &.not-editable {
                 background:#bbbbbb;
             }
