--- a/public/css/_navbar.scss
+++ b/public/css/_navbar.scss
@@ -8,7 +8,12 @@
         -ms-transition: background 0.25s ease;
 
         .navbar-brand-wrapper {
-            background: #1c45ef;
+            background: #56CCF2;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2F80ED, #56CCF2);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2F80ED, #56CCF2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+
             width: 250px;
             height: 63px;
             border-bottom: 1px solid white;
