--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -92,3 +92,18 @@ table  {
         }
     }
 }
+
+.container-login {
+    background: #005AA7;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #FFFDE4, #005AA7);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #FFFDE4, #005AA7); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
+    color: white;
+}
+
+.modal-content {
+    .form-horizontal {
+        margin-bottom: 0px;
+    }
+}
